--- a/public/design.html
+++ b/public/design.html
@@ -23,7 +23,7 @@ body {
 	background-image: url('http://eagleads.phpsitescripts.com/images/eaglenest.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	min-height: 928px;
 }
 .fixed-bg2 {
@@ -31,7 +31,7 @@ body {
 	background-image: url('http://eagleads.phpsitescripts.com/images/cliffslight.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	min-height: 1142px;
 }
 .fixed-bg3 {
@@ -39,7 +39,7 @@ body {
 	background-image: url('http://eagleads.phpsitescripts.com/images/greenmountaincross.jpg.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	min-height: 1300px;
 }
 .ParallaxVideo{ 
