--- a/public/design.html
+++ b/public/design.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Sabrina Markon - Experienced Web Developer Recent Project Portfolio - PHP, Laravel, OOP, JavaScript, HTML5, CSS3, JQuery, Bootstrap, SQL">
     <meta name="author" content="Sabrina Markon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='http://eagleads.phpsitescripts.com/css/bootstrap.min.css'>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Raleway:100,200,400" rel="stylesheet">
     <link rel='stylesheet' href='http://eagleads.phpsitescripts.com/css/style.css'>
 </head>
